--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,5 @@
   <a routerLink="/search/country" routerLinkActive="active">Search by country</a>
   <a routerLink="/search/place" routerLinkActive="active">Search by place</a>
 </nav>
+<app-login></app-login>
 <router-outlet></router-outlet>
