--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,12 @@
 <!--The content below is only a placeholder and can be replaced.-->
+
+<app-login></app-login>
 <div style="text-align:center">
   <h1>
     Welcome to the {{title}} app
   </h1>
 </div>
 <h2>Check what can yahoo yql can do !!</h2>
-<nav>
-  <a routerLink="/search/country" routerLinkActive="active">Search by country</a>
-  <a routerLink="/search/place" routerLinkActive="active">Search by place</a>
-</nav>
-<app-login></app-login>
+<div class="container">
 <router-outlet></router-outlet>
+</div>
