--- a/src/app/view/login.component.html
+++ b/src/app/view/login.component.html
@@ -1,2 +1,50 @@
-<input placeholder="username">
-<input placeholder="password">
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+              data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Weather App</a>
+    </div>
+
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a routerLink="/search/country" routerLinkActive="active">Search by Country
+          <span class="sr-only">(current)</span></a>
+        </li>
+        <li><a routerLink="/search/place" routerLinkActive="active">Search by Place</a>
+        </li>
+      </ul>
+      <form id="signin" class="navbar-form navbar-right" role="form" *ngIf="!this.loginService.connected; else welcome" >
+        <div class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+          <input #username type="text" class="form-control" name="username" value=""
+                 placeholder="Username">
+        </div>
+
+        <div class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+          <input #password type="password" class="form-control" name="password"
+                 value="" placeholder="Password">
+        </div>
+
+        <button class="btn btn-primary" (click)="login(username.value, password.value)">Login</button>
+      </form>
+
+      <ng-template #welcome>
+        <form id="logout" class="navbar-form navbar-right">
+          <button class="btn btn-primary" (click)="logout()">Logout</button>
+        </form>
+
+      </ng-template>
+
+
+    </div>
+  </div>
+</nav>
