--- a/src/app/view/places.component.html
+++ b/src/app/view/places.component.html
@@ -1,9 +1,9 @@
-<md-list>
-  <md-list-item *ngFor="let place of places">
-    <h4 md-line>{{place.woeid}}</h4>
-    <h4 md-line>{{place.prettyName}}</h4>
-    <h4 md-line><a href="/weather/{{place.woeid}}">Chequea el clima</a></h4>
-  </md-list-item>
-</md-list>
-
-
+<div class="list-group">
+  <md-list>
+    <h2></h2>
+    <h3 md-subheader>Places</h3>
+    <md-list-item *ngFor="let place of places">
+      <a href="/weather/{{place.woeid}}" class="list-group-item">{{place.prettyName}} <span class="badge">{{place.woeid}}</span></a>
+    </md-list-item>
+  </md-list>
+</div>
